// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageLoading 不带加载条 1`] = `
<div>
  <div
    class="avx-page-loading-container"
    id="avx-page-loading-container"
    style="background: rgb(245, 245, 245);"
  >
    <div
      class="avx-page-loading-loader"
    >
      <div
        class="avx-page-loading-content"
      >
        <div
          class="avx-page-loading-item"
          style="background: rgb(24, 144, 255);"
        />
        <div
          class="avx-page-loading-item avx-page-loading-animation-delay"
          style="background: rgb(24, 144, 255);"
        />
        <div
          class="avx-page-loading-item avx-page-loading-animation-delay"
          style="background: rgb(24, 144, 255);"
        />
        <div
          class="avx-page-loading-item"
          style="background: rgb(24, 144, 255);"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`PageLoading 全屏 1`] = `
<div>
  <div
    class="avx-page-loading-container avx-page-loading-fullscreen nprogress-custom-parent"
    id="avx-page-loading-container"
    style="background: rgb(245, 245, 245);"
  >
    <div
      class="avx-page-loading-loader"
    >
      <div
        class="avx-page-loading-content"
      >
        <div
          class="avx-page-loading-item"
          style="background: rgb(24, 144, 255);"
        />
        <div
          class="avx-page-loading-item avx-page-loading-animation-delay"
          style="background: rgb(24, 144, 255);"
        />
        <div
          class="avx-page-loading-item avx-page-loading-animation-delay"
          style="background: rgb(24, 144, 255);"
        />
        <div
          class="avx-page-loading-item"
          style="background: rgb(24, 144, 255);"
        />
      </div>
    </div>
    <div
      class="nprogress"
      id="nprogress"
    >
      <div
        class="bar"
        role="bar"
        style="transition: all 200ms linear; transform: translate3d(-100%,0,0); margin-left: -82%;"
      >
        <div
          class="peg"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`PageLoading 加载态 加载中 1`] = `
<div>
  <div
    class="avx-page-loading-container nprogress-custom-parent"
    id="avx-page-loading-container"
    style="background: rgb(245, 245, 245);"
  >
    <div
      class="avx-page-loading-loader"
    >
      <div
        class="avx-page-loading-content"
      >
        <div
          class="avx-page-loading-item"
          style="background: rgb(24, 144, 255);"
        />
        <div
          class="avx-page-loading-item avx-page-loading-animation-delay"
          style="background: rgb(24, 144, 255);"
        />
        <div
          class="avx-page-loading-item avx-page-loading-animation-delay"
          style="background: rgb(24, 144, 255);"
        />
        <div
          class="avx-page-loading-item"
          style="background: rgb(24, 144, 255);"
        />
      </div>
    </div>
    <div
      class="nprogress"
      id="nprogress"
    >
      <div
        class="bar"
        role="bar"
        style="transition: all 200ms linear; transform: translate3d(-100%,0,0); margin-left: -82%;"
      >
        <div
          class="peg"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`PageLoading 加载态 加载完毕 1`] = `
<div>
  加载完毕
</div>
`;

exports[`PageLoading 自定义加载图形 1`] = `
<div>
  <div
    class="avx-page-loading-container nprogress-custom-parent"
    id="avx-page-loading-container"
    style="background: rgb(245, 245, 245);"
  >
    <div
      class="avx-page-loading-loader"
    >
      <div>
        loading...
      </div>
    </div>
    <div
      class="nprogress"
      id="nprogress"
    >
      <div
        class="bar"
        role="bar"
        style="transition: all 200ms linear; transform: translate3d(-100%,0,0); margin-left: -82%;"
      >
        <div
          class="peg"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`PageLoading 默认状态 1`] = `
<div>
  <div
    class="avx-page-loading-container nprogress-custom-parent"
    id="avx-page-loading-container"
    style="background: rgb(245, 245, 245);"
  >
    <div
      class="avx-page-loading-loader"
    >
      <div
        class="avx-page-loading-content"
      >
        <div
          class="avx-page-loading-item"
          style="background: rgb(24, 144, 255);"
        />
        <div
          class="avx-page-loading-item avx-page-loading-animation-delay"
          style="background: rgb(24, 144, 255);"
        />
        <div
          class="avx-page-loading-item avx-page-loading-animation-delay"
          style="background: rgb(24, 144, 255);"
        />
        <div
          class="avx-page-loading-item"
          style="background: rgb(24, 144, 255);"
        />
      </div>
    </div>
    <div
      class="nprogress"
      id="nprogress"
    >
      <div
        class="bar"
        role="bar"
        style="transition: all 200ms linear; transform: translate3d(-100%,0,0); margin-left: -82%;"
      >
        <div
          class="peg"
        />
      </div>
    </div>
  </div>
</div>
`;
